<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2023 Oracle and/or its affiliates. All rights reserved.

    This program and the accompanying materials are made available under the
    terms of the Eclipse Public License v. 2.0, which is available at
    http://www.eclipse.org/legal/epl-2.0.

    This Source Code may also be made available under the following Secondary
    Licenses when the conditions for such availability set forth in the
    Eclipse Public License v. 2.0 are satisfied: GNU General Public License,
    version 2 with the GNU Classpath Exception, which is available at
    https://www.gnu.org/software/classpath/license.html.

    SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0

-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.oracle.poc</groupId>
    <artifactId>json-duality-trials-and-errors</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>JSON Duality Trials and Errors</name>
    <description>Use on your own risc</description>

    <properties>
        <oradb23c.version>latest</oradb23c.version>
        <oradb23c.host>127.0.0.1</oradb23c.host>
        <oradb23c.port>1521</oradb23c.port>
        <oradb23c.http>5500</oradb23c.http>
        <oradb23c.mongo>27017</oradb23c.mongo>
        <oradb23c.db>FREEPDB1</oradb23c.db>
        <oradb23c.sid>FREE</oradb23c.sid>
        <oradb23c.userName>test</oradb23c.userName>
        <oradb23c.userPass>Us3r_P4ssw0rd</oradb23c.userPass>
        <oradb23c.dbaPass>r00t_p4ssw0rd</oradb23c.dbaPass>
        <oradb23c.url>jdbc:oracle:thin:${oradb23c.userName}/${oradb23c.userPass}@${oradb23c.host}:${oradb23c.port}/${oradb23c.db}</oradb23c.url>
        <ords.version>23.1.3.137.1032</ords.version>
        <ords.md5>20e333cffb1a7c39519bcd7463cd1d7e</ords.md5>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.json</groupId>
            <artifactId>jakarta.json-api</artifactId>
            <version>2.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.parsson</groupId>
            <artifactId>parsson</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc11</artifactId>
            <version>23.2.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongodb-driver-sync</artifactId>
            <version>4.9.1</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.common</groupId>
            <artifactId>helidon-common</artifactId>
            <version>4.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.config</groupId>
            <artifactId>helidon-config-yaml</artifactId>
            <version>4.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.nima.webserver</groupId>
            <artifactId>helidon-nima-webserver</artifactId>
            <version>4.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.nima.http.media</groupId>
            <artifactId>helidon-nima-http-media</artifactId>
            <version>4.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.helidon.nima.http.media</groupId>
            <artifactId>helidon-nima-http-media-jsonp</artifactId>
            <version>4.0.0-SNAPSHOT</version>
        </dependency>

    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.2.0</version>
                    <!-- Remove @ from delimiters -->
                    <configuration>
                        <delimiters>
                            <delimiter>${*}</delimiter>
                        </delimiters>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <groupId>io.fabric8</groupId>
                    <artifactId>docker-maven-plugin</artifactId>
                    <version>0.33.0</version>
                </plugin>
                <plugin>
                    <groupId>com.googlecode.maven-download-plugin</groupId>
                    <artifactId>download-maven-plugin</artifactId>
                    <version>1.7.0</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>20</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>docker</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.fabric8</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <configuration>
                    <logStdout>true</logStdout>
                    <images>
                        <image>
                            <alias>oradb</alias>
                            <name>eclipselink.uk.oracle.com/infra/oradb23c:${oradb23c.version}</name>
                            <run>
                                <env>
                                    <ORACLE_PDB>${oradb23c.db}</ORACLE_PDB>
                                    <ORACLE_PWD>${oradb23c.dbaPass}</ORACLE_PWD>
                                    <ORACLE_EDITION>standard</ORACLE_EDITION>
                                </env>
                                <hostname>${oradb23c.host}</hostname>
                                <ports>
                                    <port>${oradb23c.host}:${oradb23c.port}:${oradb23c.port}</port>
                                    <port>${oradb23c.host}:${oradb23c.http}:${oradb23c.http}</port>
                                    <port>${oradb23c.host}:${oradb23c.mongo}:${oradb23c.mongo}</port>
                                </ports>
                                <volumes>
                                    <bind>
                                        <volume>${project.basedir}/scripts:/opt/oracle/scripts/startup</volume>
                                        <volume>${project.basedir}/docker:/opt/oracle/install</volume>
                                    </bind>
                                </volumes>
                                <wait>
                                    <log>Completed: ALTER PLUGGABLE DATABASE ${oradb23c.db} SAVE STATE</log>
                                    <time>600000</time>
                                </wait>
                            </run>
                        </image>
                    </images>
                    <showLogs>true</showLogs>
                    <startParallel>false</startParallel>
                </configuration>
            </plugin>
        </plugins>

    </build>

    <profiles>

        <profile>
            <id>helidon</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <mainClass>com.oracle.jsonduality.HelidonMain</mainClass>
                            <cleanupDaemonThreads>false</cleanupDaemonThreads>
                        </configuration>
                        <executions>
                            <execution>
                                <id>main-run</id>
                                <phase>integration-test</phase>
                                <goals>
                                    <goal>java</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>startdb</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>io.fabric8</groupId>
                        <artifactId>docker-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>oradb-run</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>start</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>com.googlecode.maven-download-plugin</groupId>
                        <artifactId>download-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>jdk-download</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>wget</goal>
                                </goals>
                                <configuration>
                                    <url>https://download.java.net/java/GA/jdk19.0.2/fdb695a9d9064ad6b064dc6df578380c/7/GPL/openjdk-19.0.2_linux-x64_bin.tar.gz</url>
                                    <unpack>false</unpack>
                                    <outputDirectory>${project.basedir}/docker</outputDirectory>
                                    <sha256>34cf8d095cc071e9e10165f5c45023f96ec68397fdaabf6c64bfec1ffeee6198</sha256>
                                </configuration>
                            </execution>
                            <execution>
                                <id>ords-download</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>wget</goal>
                                </goals>
                                <configuration>
                                    <url>https://download.oracle.com/otn_software/java/ords/ords-${ords.version}.zip</url>
                                    <unpack>false</unpack>
                                    <outputDirectory>${project.basedir}/docker</outputDirectory>
                                    <md5>${ords.md5}</md5>
                                </configuration>
                            </execution>
                            <execution>
                                <id>oci-download</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>wget</goal>
                                </goals>
                                <configuration>
                                    <url>https://download.oracle.com/otn_software/linux/instantclient/2110000/instantclient-basic-linux.x64-21.10.0.0.0dbru.zip</url>
                                    <unpack>false</unpack>
                                    <outputDirectory>${project.basedir}/docker</outputDirectory>
                                    <md5>0e8fca689549fa10030ab83a80142e30</md5>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>stopdb</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>io.fabric8</groupId>
                        <artifactId>docker-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>oradb-stop</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>stop</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
